# sentinel

./: .gitignore  App.tsx  Dockerfile  README.md  create_user.py  docker-compose.yml  index.html  index.tsx  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_dynamo.py  test_mongo.py  types.ts  verify_data.py  verify_env.py  verify_mongo_split.py  verify_split.py
.idx/: dev.nix
.kiro/specs/fleet-auth-login/: .config.kiro  design.md  requirements.md  tasks.md
agent/: agent.yaml  build.sh  debian-control  go.mod  go.sum  main.go  postinst  sentinel-agent.service
services/: apiService.ts  auth_service.py  dynamo_service.py  geminiService.ts  mockData.ts  mongo_service.py
src/auth/: AuthContext.tsx  LoginForm.tsx  LoginPage.tsx  ProtectedRoute.tsx
